some corrections made to styling code

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 body{
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: hsl(233, 47%, 7%);
     display: flex;
     align-items: center;
@@ -22,10 +22,10 @@ main{
     background-color: hsl(233, 47%, 7%);
     width:60%;
     max-width:1440px;
-    height:50%;
     display:flex;
     
 }
+
 
 img{
     width:100%;
@@ -72,6 +72,7 @@ p[class="description"]{
     flex-direction: column;
     align-items: left;
     justify-content: space-between;
+
 }
 
 .stats{
@@ -86,18 +87,28 @@ p[class="description"]{
 @media (max-width:760px){
     main{
         flex-direction: column-reverse;
+        width:60%;
     }
     html{overflow-x: hidden;
     overflow-y: auto;
+    }
+
+    .image, .textbox{
+        width:100%;
     }
 }
 
 @media (max-height:500px){
     main{
         flex-direction: column-reverse;
+        width:60%;
     }
     html{overflow-x: hidden;
         overflow-y: auto;
+        }
+    
+   .image, .textbox{
+            width:100%;
         }
 }
 
